# DynaCharting

./: .gitignore  CHART_AUTHORING.md  CLAUDE.md  CMakeLists.txt  ROADMAP.md  d2_7_candle_chart.ppm  d3_5_recipe_chart.ppm  d4_6_full_chart.ppm  d5_7_interactive_chart.ppm  d6_3_live_chart.ppm  live_frame.ppm  live_frame2.ppm  live_frame3.ppm  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
core/: CMakeLists.txt
core/demos/: d2_7_candle_demo.cpp  d3_5_recipe_demo.cpp  d4_6_full_demo.cpp  d5_7_interactive_demo.cpp  d6_3_live_demo.cpp  d76_showcase.cpp  d77_declarative.cpp  d78_showcase.cpp  dashboard_server.cpp  dawn_server_util.hpp  dawn_window_demo.cpp  gallery.cpp  hello_glfw.cpp  live_server.cpp  showcase_server.cpp
core/include/dc/anim/: AnimationController.hpp  AnimationManager.hpp  DrawItemAnimator.hpp  Easing.hpp  FrameClock.hpp  InstanceTransition.hpp  Tween.hpp  ViewportAnimator.hpp
core/include/dc/binding/: BindingEvaluator.hpp
core/include/dc/commands/: CommandHandlerRegistry.hpp  CommandHistory.hpp  CommandProcessor.hpp  UndoGroup.hpp  ValidationConfig.hpp
core/include/dc/data/: AggregationManager.hpp  AlertManager.hpp  CandleAggregator.hpp  CompositeDataSource.hpp  DataSource.hpp  (+14 more)
core/include/gpu/: Gpu.hpp
core/src/anim/: AnimationController.cpp  AnimationManager.cpp  DrawItemAnimator.cpp  InstanceTransition.cpp  ViewportAnimator.cpp
core/src/binding/: BindingEvaluator.cpp
core/src/commands/: CommandHistory.cpp  CommandProcessor.cpp  ValidationConfig.cpp
core/src/data/: AggregationManager.cpp  AlertManager.cpp  CandleAggregator.cpp  CompositeDataSource.cpp  DerivedBuffer.cpp  FakeDataSource.cpp  LiveIngestLoop.cpp  LodManager.cpp  MessageCodec.cpp  PivotIngest.cpp  ReactiveGraph.cpp  ResolutionPolicy.cpp  RowIdentity.cpp  TableStore.cpp  TemporalFilter.cpp  VirtualRange.cpp  WebSocketDataSource.cpp
core/src/debug/: DebugOverlay.cpp  FrameProfiler.cpp
core/src/document/: SceneDocument.cpp  SceneReconciler.cpp
core/src/drawing/: DrawingInteraction.cpp  DrawingStore.cpp  ExtendedDrawings.cpp  FreehandCapture.cpp
core/src/encode/: EncodePass.cpp  Encoding.cpp
core/src/event/: EventBus.cpp
core/src/export/: ChartSnapshot.cpp  DChartFile.cpp  SvgExporter.cpp
core/src/geo/: Earcut.cpp
core/src/geometry/: CurveTessellator.cpp
core/src/gl/: BuiltinEffects.cpp  GlDevice.cpp  GlTriSolidBackend.cpp  GlfwContext.cpp  GpuBufferManager.cpp  OsMesaContext.cpp  PostProcessPass.cpp  Renderer.cpp  ShaderProgram.cpp  TextureManager.cpp
core/src/gpu/: ComputeStage.cpp  DawnDevice.cpp  DawnInstancedCandleBackend.cpp  DawnInstancedPointColorBackend.cpp  DawnInstancedRectBackend.cpp  DawnInstancedRectColorBackend.cpp  DawnLine2dBackend.cpp  DawnLineAABackend.cpp  DawnPickBackend.cpp  DawnPointsBackend.cpp  DawnPostProcess.cpp  DawnSceneRenderer.cpp  DawnTextSdfBackend.cpp  DawnTexturedQuadBackend.cpp  DawnTriAABackend.cpp  DawnTriGradientBackend.cpp  DawnTriSolidBackend.cpp  DawnWindowContext.cpp  placeholder.cpp
core/src/host/: JsonHost.cpp
core/src/ingest/: IngestProcessor.cpp
core/src/interaction/: BrushGesture.cpp  ContextMenu.cpp  DragDropState.cpp  FocusManager.cpp  HandleSet.cpp  HoverManager.cpp  InteractionCoordinator.cpp  InteractionRuntime.cpp  PickRouter.cpp  RenderBridge.cpp  SelectionPredicate.cpp  SignalStore.cpp  SnapManager.cpp
core/src/layout/: Anchor.cpp  CollisionSolver.cpp  LayoutGrid.cpp  LayoutInteraction.cpp  LayoutManager.cpp
core/src/manifest/: ContextKit.cpp  Manifest.cpp  ManifestValidator.cpp
core/src/math/: Ema.cpp  Indicators.cpp  NiceTicks.cpp  NiceTimeTicks.cpp
core/src/measure/: MeasureState.cpp
core/src/metadata/: AccessibilityBridge.cpp  AnnotationRenderer.cpp  AnnotationStore.cpp
core/src/minimap/: MinimapState.cpp
core/src/pipelines/: PipelineCatalog.cpp  PipelineRegistry.cpp
core/src/recipe/: AreaRecipe.cpp  AxisRecipe.cpp  BollingerRecipe.cpp  CandleRecipe.cpp  CrosshairRecipe.cpp  DrawingRecipe.cpp  HighlightRecipe.cpp  LegendRecipe.cpp  LevelLineRecipe.cpp  LineRecipe.cpp  MacdRecipe.cpp  MeasureRecipe.cpp  MinimapRecipe.cpp  RSIRecipe.cpp  ScrollIndicatorRecipe.cpp  SmaRecipe.cpp  StochasticRecipe.cpp  TextRecipe.cpp  TooltipRecipe.cpp  VolumeRecipe.cpp
core/src/render/: BackendRegistry.cpp  CpuBufferStore.cpp  GpuDeviceCompileCheck.cpp
core/src/scale/: ColorLut.cpp  ColorScale.cpp  GeoProjection.cpp  Scale.cpp
core/src/scene/: BatchBuilder.cpp  ResourceRegistry.cpp  Scene.cpp
core/src/selection/: BoxSelection.cpp  SelectionState.cpp
core/src/session/: ChartSession.cpp  ChartState.cpp  SceneSerializer.cpp  SessionBridge.cpp
core/src/style/: Theme.cpp  ThemeManager.cpp
core/src/text/: GlyphAtlas.cpp  TextEditState.cpp
core/src/transform/: ColumnStore.cpp  ComputeWgsl.cpp  CustomCompute.cpp  Expr.cpp  ExprWgsl.cpp  StreamingScheduler.cpp  TransformDag.cpp
core/src/viewport/: AutoScale.cpp  CursorHint.cpp  DataPicker.cpp  GestureRecognizer.cpp  InputMapper.cpp  ScaleMapping.cpp  Viewport.cpp  ZoomController.cpp
core/tests/: d10_1_style.cpp  d10_2_hit_test.cpp  d10_3_dynamic_axis.cpp  d10_4_pane_clear.cpp  d10_5_frustum_cull.cpp  d10_6_aa_lines.cpp  d11_1_input_click.cpp  d11_2_autoscale.cpp  d11_3_selection.cpp  d11_4_highlight.cpp  d11_5_tooltip.cpp  d11_6_interaction.cpp  d12_1_grid.cpp  d12_2_aa_ticks.cpp  d12_3_data_xaxis.cpp  d12_4_axis_style.cpp  d12_5_spine_labels.cpp  d12_6_axis_gl.cpp  d13_1_time_ticks.cpp  d13_2_time_format.cpp  d13_3_time_axis.cpp  d13_4_fake_timestamps.cpp  d13_5_time_gl.cpp  d14_1_volume.cpp  d14_2_visibility.cpp  d14_3_series_info.cpp  d14_4_legend.cpp  d14_5_legend_toggle.cpp  d14_6_dawn_candle.cpp  d14_6_volume_gl.cpp  d15_1_zoom_controller.cpp  d15_4_scroll_indicator.cpp  d16_1_drawing_store.cpp  d16_4_drawing_recipe.cpp  d16_5_drawing_interaction.cpp  d17_1_indicators.cpp  d17_2_rsi_recipe.cpp  d17_4_stochastic_recipe.cpp  d17_5_indicator_gl.cpp  d18_1_export.cpp  (+240 more)
core/wasm/: dc_engine_host.cpp  dc_wasm.cpp  dc_webgpu.cpp  dc_webgpu.html  dc_webgpu_all.cpp  dc_webgpu_all.html  run_dc_ingest.mjs  run_dc_wasm.mjs
(+1410 files in other folders)
